# eimu_cpp

./: .gitignore  CMakeLists.txt  README.md
debian/: changelog
src/: comm_speed_test.cpp  read_imu.cpp
